# pt-companies-search

./: .dashboard.py.swp  .gitignore  CHANGELOG_DB_STANDARDIZATION.md  DATA_SOURCES.md  DB_BEST_PRACTICES.md  DWIGHT_SUMMARY.md  Dockerfile.searcher  HANDOFF_TO_MICHAEL.md  MANIFEST.in  README.md  ROUTING_LOGIC.md  aliases.sh  app.py  automate.py  dashboard.py  db.py  db_enrich_sync.py  db_loader.py  docker-compose.postgres.yml  enrich.py  enrich.sh  enrich_api.py  init-db.sql  nif_config.json  nif_enrich.py  nif_rate_limits.json  nif_search.py  pyproject.toml  requirements.txt  run_dashboard.sh  schedule.py  scrape.sh  test_enrich.py
.github/workflows/: build-and-deploy.yaml  ci.yaml  scheduled.yaml
.streamlit/: config.toml
db/: docker-compose.postgres.yml  init-db.sql
docker/: Dockerfile.dashboard  Dockerfile.enricher  Dockerfile.final  Dockerfile.scraper  Dockerfile.searcher
docs/: CHANGELOG_DB_STANDARDIZATION.md  DATA_SOURCES.md  DB_BEST_PRACTICES.md  DWIGHT_SUMMARY.md  HANDOFF_TO_MICHAEL.md  ROUTING_LOGIC.md
legacy/: db.py  db_loader.py  enrich_search_results.py  leads.py  migrate_to_db.py  nif_enrich.py  nif_search.py  scraper.py  sync_search_to_db.py
legacy/pages/: einforma.py  nif.py
pages/: einforma.py  nif.py
pt_companies_search/: cli.py
pt_companies_search/core/: config.py  database.py
pt_companies_search/dashboard/: app.py
pt_companies_search/enricher/: key_rotation.py  nif_enrich.py
pt_companies_search/scraper/: einforma.py  nif.py
pt_companies_search/utils/: helpers.py
scripts/: aliases.sh
src/pt_companies_search/: cli.py
(+21 files in other folders)
