[project]
name = "pt-companies-search"
version = "1.0.0"
description = "Portugal New Companies Tracker and Enricher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "psycopg2-binary",
    "streamlit",
    "pandas",
    "plotly",
    "python-dotenv",
    "beautifulsoup4",
    "lxml",
]

[project.scripts]
pt-search = "pt_companies_search.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
