[project]
name = "pt-companies-search"
version = "1.0.0"
description = "Portugal New Companies Tracker and Enricher"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "psycopg2-binary",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pandas",
        "python-dotenv",
    "beautifulsoup4",
    "lxml",
    "polars",
    "adbc-driver-postgresql",
    "pyarrow",,
    "pyarrow",
    "connectorx",
    "adbc-driver-postgresql",
]

[project.scripts]
pt-search = "pt_companies_search.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
